--- a/frontend/src/scss/_components.scss
+++ b/frontend/src/scss/_components.scss
@@ -144,7 +144,7 @@
 
         background: #E5674E;
         border-radius: 999rem;
-
+        color: #ffffff;
         top: 2%;
         right: 5%;
 
